8336779: [lworld] C2 compilations hits "what's left behind is null" assert in do_checkcast