src/hotspot/share/opto/graphKit.cpp
@@ -1299,6 +1299,7 @@ Node* GraphKit::null_check_common(Node* value, BasicType type,
       // vtptr = InlineTypeNode::make_null(_gvn, vtptr->type()->inline_klass());
       // replace_in_map(value, vtptr);
       // return vtptr;
+      replace_in_map(value, null());
       return null();
     }
     bool do_replace_in_map = (null_control == nullptr || (*null_control) == top());
